# Squick

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  install.sh  package-lock.json
src/: CMakeLists.txt  global.cmake
src/lua/: system.lua
src/lua/cfg/: scenario_cfg.lua
src/lua/squick/: class.lua  cycel_reset.lua  print_table.lua
src/proto/: define.proto  game.proto  msg_share.proto  server.proto  share.proto
src/server/: CMakeLists.txt  squick.cc
src/server/admin/plugin/logic/: CMakeLists.txt
src/server/admin/plugin/server/: CMakeLists.txt
src/server/db/client/: world_module.cc  world_module.h
src/server/db/logic/: player_redis_module.cc
src/server/db/plugin/client/: CMakeLists.txt  i_world_module.h  plugin.cc  world_module.cc  world_module.h
src/server/db/plugin/logic/: CMakeLists.txt  account_redis_module.cc  plugin.cc  (+5 more)
src/server/db/server/: i_server_module.h  server_module.cc  server_module.h
src/server/game/: CMakeLists.txt
src/server/game/client/: world_module.cc
src/server/game/consume_manager/: CMakeLists.txt
src/server/game/inventory/: inventory_module.h
src/server/game/logic/: CMakeLists.txt  create_role_module.cc  i_npc_refresh_module.h  scene_process_module.h  sync_pos_module.cc
src/server/game/server/: CMakeLists.txt  auto_broadcast_module.cc  game_manager_module.h  i_game_manager_module.h  i_server_module.h  scene_auto_broadcast_module.cc  scene_auto_broadcast_module.h  server_module.cc
src/server/login/http_server/: i_http_server_module.h
src/server/login/logic/: CMakeLists.txt  i_logic_module.h
src/server/master/http_server/: CMakeLists.txt
src/server/master/server/: server_module.cc
src/server/micro/chat/: chat_module.h  i_chat_module.h
src/server/proxy/client/: game_module.cc  plugin.cc
src/server/proxy/logic/: plugin.cc
src/server/proxy/server/: server_module.cc  ws_module.cc
src/server/world/: CMakeLists.txt
src/server/world/client/: master_module.cc
src/server/world/pvp/: CMakeLists.txt  i_server_module.h
src/server/world/server/: server_module.cc  server_module.h
src/server/www/plugin/: CMakeLists.txt
src/squick/: CMakeLists.txt
src/squick/base/: net.h  net_client.h  platform.h  schedule.h  ws.h
src/squick/core/: CMakeLists.txt  base.h  data_list.h  dyn_lib.h  easylogging++.h  i_module.h  i_object.h  i_plugin.h  i_plugin_manager.h  i_property.h  i_property_manager.h  i_record.h  memory_counter.h  platform.h  plugin_manager.cc  plugin_manager.h  plugin_server.cc  plugin_server.h  property.h  property_manager.h  record.cc  record.h  vector2.h
src/squick/plugin/: CMakeLists.txt
src/squick/plugin/actor/: CMakeLists.txt  actor.cc  actor.h  actor_module.cc  actor_module.h  export.h  i_component_module.h  module.cc  plugin.cc
src/squick/plugin/config/: CMakeLists.txt  class_module.cc  class_module.h  config_module.cc  config_module.h  element_module.cc  element_module.h  export.h  plugin.cc
src/squick/plugin/kernel/: CMakeLists.txt  cell_module.cc  cell_module.h  data_tail_module.cc  data_tail_module.h  elo_module.cc  elo_module.h  event_module.cc  event_module.h  export.h  i_kernel_module.h  i_scene_module.h  kernel_module.cc  kernel_module.h  kernel_plugin.cc  plugin.cc  scene_module.cc  scene_module.h  schedule_module.cc  schedule_module.h  thread_pool_module.cc  thread_pool_module.h
src/squick/plugin/log/: CMakeLists.txt  export.h  log_module.cc  log_module.h  plugin.cc
src/squick/plugin/lua/: CMakeLists.txt  export.h  lua_pb_module.cc  lua_pb_module.h  lua_script_module.cc  lua_script_module.h  plugin.cc
src/squick/plugin/mysql/: export.h
src/squick/plugin/navigation/: CMakeLists.txt  export.h  navigation_data_module.cc  navigation_data_module.h  navigation_module.cc  navigation_module.h  plugin.cc
src/squick/plugin/net/: CMakeLists.txt  export.h  http_client.cc  http_client.h  http_client_module.cc  http_client_module.h  http_server.cc  http_server.h  http_server_module.cc  http_server_module.h  i_http_client.h  i_http_server.h  i_http_server_module.h  i_net.h  i_net_module.h  i_ws_module.h  inet.h  net.cc  net.h  net_client_module.cc  net_client_module.h  net_module.cc  net_module.h  plugin.cc  udp_module.cc  udp_module.h  ws_module.cc  ws_module.h
src/squick/plugin/no_sql/: CMakeLists.txt  export.h  no_sql_module.cc  no_sql_module.h  plugin.cc  redis_client_socket.cc  redis_client_socket.h
src/squick/plugin/security/: CMakeLists.txt  export.h  plugin.cc  security_module.cc  security_module.h
src/squick/plugin/test/: CMakeLists.txt  plugin.cc  test_module.cc  test_module.h
src/squick/struct/: CMakeLists.txt  gen_code.sh  limit.h  struct.h
src/test/: CMakeLists.txt
src/tester/: CMakeLists.txt
src/tools/config_generator/: CMakeLists.txt  config_generator.cc  config_generator.h  config_generator_help.h  generator.h  main.cc
src/tools/config_generator/generator/: cpp_generator.h  cs_generator.h  ini_generator.h  java_generator.h  logic_class_generator.h  pb_generator.h  sql_generator.h  struct_generator.h  ts_generator.h
src/tools/config_generator/mini_excel_reader/: mini_excel_reader.h
src/tools/xlsx2need/: CMakeLists.txt  config_generator.cc
src/tools/xlsx2need/generator/: ini_generator.h  logic_class_generator.h  struct_generator.h
src/tutorial/: CMakeLists.txt
src/tutorial/t1_hello_plugin/: hello_plugin_module.cc  hello_plugin_module.h
src/tutorial/t2_hello_property/: hello_property_module.cc  hello_property_module.h  plugin.cc  plugin.h
src/tutorial/t3_hello_event/: CMakeLists.txt  hello_event_module.cc  hello_event_module.h  plugin.cc  plugin.h
src/tutorial/t4_hello_async/: CMakeLists.txt  hello_async_module.cc  hello_async_module.h  plugin.cc  plugin.h
src/tutorial/t5_hello_http_server/: CMakeLists.txt  hello_http_server_module.cc  hello_http_server_module.h  plugin.cc  plugin.h
src/tutorial/t6_hello_navigation/: CMakeLists.txt  hello_navigation.cc  hello_navigation.h  plugin.cc  plugin.h
src/tutorial/t7_hello_redis/: CMakeLists.txt  hello_redis_module.cc  hello_redis_module.h  plugin.cc  plugin.h
src/www/: build.sh
(+175 files in other folders)
